# pyproject-setup

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/pyproject_setup/: __init__.py  cli.py  generator.py  presets.py
