[project]
name = "pyproject-setup"
version = "0.1.0"
description = "CLI tool to scaffold pyproject.toml with pre-configured linting and tooling"
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
authors = [{ name = "CarterPerez-dev" }]
keywords = ["pyproject", "scaffold", "cli", "template", "linting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.20.0,<1.0.0",
    "rich>=14.2.0,<15.0.0",
    "tomli-w>=1.2.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "mypy>=1.19.0,<2.0.0",
    "ruff>=0.14.0,<1.0.0",
]

[project.scripts]
pyproject-setup = "pyproject_setup.cli:app"
pps = "pyproject_setup.cli:app"

[project.urls]
Repository = "https://github.com/CarterPerez-dev/pyproject-setup"
Issues = "https://github.com/CarterPerez-dev/pyproject-setup/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyproject_setup"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "B", "C4", "UP", "ARG", "SIM", "PTH", "RUF", "S", "N"]
ignore = ["E501", "B008", "S101", "ARG001"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG001"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tomli_w"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.coverage.run]
branch = true
source = ["src/pyproject_setup"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
